# pytorch

./: .lintrunner.toml  BUILD.bazel  CMakeLists.txt  build_variables.bzl  launch_benchmark.sh  setup.py
.ci/docker/: build.sh
.ci/pytorch/: test.sh
.github/scripts/: generate_binary_build_matrix.py  generate_ci_workflows.py
.github/templates/: windows_binary_build_workflow.yml.j2
.github/workflows/: generated-windows-binary-conda-nightly.yml  generated-windows-binary-libtorch-debug-main.yml  generated-windows-binary-libtorch-debug-nightly.yml  generated-windows-binary-libtorch-release-main.yml  generated-windows-binary-libtorch-release-nightly.yml  generated-windows-binary-wheel-nightly.yml  inductor.yml  periodic.yml  pull.yml  rocm.yml  slow.yml  trunk.yml
benchmarks/dynamo/: common.py  expected_ci_speedup_inductor_torchbench_cpu.csv
benchmarks/operator_benchmark/: benchmark_core.py  benchmark_pytorch.py  benchmark_runner.py
c10/: CMakeLists.txt  build.bzl
c10/core/: DispatchKeySet.h  MapAllocator.cpp  ScalarType.h
c10/macros/: Macros.h
c10/util/: BFloat16-math.h  BFloat16.h  CallOnce.h  Float8_e5m2fnuz.h  LeftRight.h  Synchronized.h  TypeCast.h  TypeIndex.h  TypeList.h  TypeTraits.h
c10/xpu/: CMakeLists.txt  XPUDeviceProp.h  XPUException.h  XPUFunctions.cpp  XPUFunctions.h  XPUMacros.h  build.bzl
c10/xpu/impl/: XPUDeviceAttributes.h  XPUDeviceImpl.cpp  XPUDeviceImpl.h
c10/xpu/test/: CMakeLists.txt
c10/xpu/test/impl/: XPUDeviceTest.cpp  XPUTest.cpp
caffe2/: CMakeLists.txt
cmake/: Dependencies.cmake  Summary.cmake
cmake/Modules/: FindIntelSYCL.cmake  FindMKL.cmake  FindSYCLToolkit.cmake
cmake/public/: LoadHIP.cmake  xpu.cmake
docs/source/: backends.rst
test/: test_foreach.py  test_hub.py  test_mps.py  test_namedtuple_return_api.py  test_nn.py  test_proxy_tensor.py  test_reductions.py  test_sparse_csr.py  test_transformers.py  test_utils.py
test/distributed/: test_device_mesh.py  test_dynamo_distributed.py  test_inductor_collectives.py
test/dynamo/: test_export.py  test_misc.py  (+1 more)
tools/: bazel.bzl
torch/: CMakeLists.txt  __init__.py  _meta_registrations.py  _tensor.py  custom_class.h  custom_class_detail.h
(+118 files in other folders)
